# knowledge-hub

./: .dockerignore  Dockerfile  README.md  deploy.sh  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/debug/resolved/: digest-500-no-credentials.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/phases/01-project-foundation/: 01-RESEARCH.md
.planning/phases/02-slack-ingress/: 02-01-SUMMARY.md  02-02-PLAN.md
.planning/phases/03-content-extraction/: 03-01-PLAN.md
.planning/phases/04-llm-processing/: 04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-notion-output/: 05-01-PLAN.md  05-02-PLAN.md  05-02-SUMMARY.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/knowledge_hub/: __init__.py  app.py  config.py  cost.py  digest.py  logging_config.py
tests/: conftest.py  test_app.py  test_cost.py  test_digest.py  test_health.py
tests/test_extraction/: test_article.py  test_paywall.py  test_pdf.py  test_pipeline.py  test_router.py  test_youtube.py
tests/test_llm/: __init__.py  test_processor.py  test_prompts.py  test_schemas.py
tests/test_models/: test_content.py  test_knowledge.py  test_notion.py  test_slack.py
tests/test_notion/: __init__.py  test_blocks.py  test_duplicates.py  test_properties.py  test_service.py  test_tags.py
tests/test_slack/: test_client.py  test_handlers.py  test_notifier.py  test_pipeline.py  test_router.py  test_urls.py
(+84 files in other folders)
